2007-08-09  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: more work to support authorization and rescinding
	* Banter/ProviderUserManager.cs: new method to delete a provider user
	  with the volatile contact handle

2007-08-08  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/NotifyButton.cs, Banter/Makefile.am: Added
	  NotifyButton
	* data/images/badge.png: new notification badge for notifications
	* data/images/Makefile.am: updated for badge image
	* Banter/NotificationManager.cs: Added notification counts
	* Banter/Person.cs: Added notification tracking
	* Banter/ChatWindow.cs: Added code to reset notifications when chat
	  window gains focus
	* Banter/PersonCard.cs: Added handling of notifications to user

2007-08-06  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to catch when a new contact is
	  requesting to enable chat with the current user.  the list is
	  updated

2007-08-06  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/GroupWindow.cs, Banter/Conversation.cs:
	  added code to invite someone to the current user's roster

2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* ChangeLog, Banter/ChatWindow.cs, Banter/PersonCard.cs: Applied patch
	  from Johnny Jacob <jjohnny@svn.gnome.org>

2007-08-06  Johnny Jacob <jjohnny@svn.gnome.org>

	* Banter/PersonCard.cd : Added a property to set/get TextChat
	button's visibility.
	* Banter/ChatWindow.cs : Hide 'TextChat' Button.
	
2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Bumped version for 0.1.10 iteration

2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/banter.in: Removed mozilla initialization code
	* NEWS: Updated for the 0.1.9 release

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added a ProviderUserRemoved event to
	  remove the user in the UI too
	* Banter/PersonManager.cs: Fixed removal code so a person get's removed
	  from the model