@@ -72,6 +72,7 @@
     <File name="./data/Themes/MessageStyles" subtype="Directory" buildaction="Compile" />
     <File name="./Banter/SidebarTextButton.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/NotifyButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/CairoHelper.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -90,6 +91,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="INdT.Telepathy, Version=0.13.2.27676, Culture=neutral, PublicKeyToken=492ed1c641a38b09" />
     <ProjectReference type="Gac" localcopy="True" refto="notify-sharp, Version=0.4.0.0, Culture=neutral, PublicKeyToken=2df29c54e245917a" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.Cairo, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" ExecuteTargetName="run">
     <BuildFilesVar />
