@@ -1,7 +1,6 @@
 
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA =   badge.png \
-				banter-16.png \
+pixmap_DATA =   banter-16.png \
 				banter-22.png \
 				banter-24.png \
 				banter-32.png \
